--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     cupertino_icons: ^1.0.2
     intl: ^0.17.0
     provider: ^6.0.3
+    flutter_dotenv: ^5.0.2
+    http: ^0.13.5
+    shared_preferences: ^2.0.15
 
 dev_dependencies:
     flutter_test:
@@ -19,6 +22,8 @@ dev_dependencies:
 
 flutter:
     uses-material-design: true
+    assets:
+        - .env
     fonts:
         - family: Lato
           fonts:
